Zmiany w QMPlay2 build 14.12.22:
	- możliwość przewijania do tyłu w strumieniach sieciowych bez ponownego łączenia się z serwerem,
	- MPRIS2 obsługuje już nazwy utworów nawet gdy nie zawierają one tytułu,
	- usunięta możliwość aktualizacji w systemach innych niż Windows,
	- poprawione przerywanie odtwarzania podczas pracy "youtube-dl",
	- drobne poprawki wyszukiwania w YouTube,
	- dodany cache do klasy ustawień,

Zmiany w QMPlay2 build 14.12.01:
	- wczytywanie czcionek napisów z katalogu, w którym znajdują się napisy ASS/SSA,
	- dodany "User-Agent" dla połączeń HTTP (ProstoPleer znowu działa),
	- poprawa kompilacji dla Windows x86-64,
	- drobne poprawy błędów,

Zmiany w QMPlay2 build 14.10.07:
	- przywrócone działanie napisów ASS z kontenera Matroska w FFMpeg 2.4.x,
	- obsługa zmiany metadanych przy użyciu FFMpeg 2.4.x,
	- możliwość pamiętania ustawień korektora wideo,
	- sortowanie dodawanych katalogów do playlisty,
	- poprawa działania YouTube,
	- dodana obsługa pleer.com,
	- poprawa działania OpenGL,
	- poprawki błędów,

Zmiany w QMPlay2 build 14.07.27:
	- ikony mogą być wczytywane z systemowego zestawu ikon (opcja domyślna, Linux, BSD), dodane zostały też nowe ikony,
	- obsługa dowolnego serwisu wideo poprzez program "youtube-dl" (w menu dodawania adresu),
	- obsługa filtrów redukcji szumów, ostrości i poziomów skalowania obrazu w VDPAU,
	- możliwość blokowania widgetów (usuwa pasek tytułu oraz blokuje pasek narzędzi),
	- możliwość wczytywania modułów z katalogu ustawień (~/.qmplay2/Modules),
	- możliwość ustawiania kolorów i tapety (podobnie jak w QMPlay1),
	- usprawnienia w odczycie/zapisie playlisty,
	- obsługa ReplayGain (domyślnie wyłączone),
	- zmiana sposobu zapisu pozycji okna,
	- usprawnione przełączanie strumieni,
	- obsługa MPRIS2 (tylko Linux/BSD),
	- poprawiona obsługa "youtube-dl",
	- obsługa obrazków w plikach OGG,
	- drobne poprawki w HttpReader,
	- poprawa działania VDPAU,
	- poprawa obsługi HTTPS,
	- inne drobne zmiany,
	- poprawki błędów,
